force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Question</label>
    <nameField>
        <displayFormat>CFQ-{0000}</displayFormat>
        <label>Clarity Form Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clarity Form Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>