force-app/main/default/objects/Question__c/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <defaultValue>&quot;Photo&quot;</defaultValue>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Photo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>