force-app/main/default/objects/Question__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Question types will be displayed by category</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input</fullName>
                <default>true</default>
                <label>Input</label>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>