force-app/main/default/objects/Question__c/fields/Connected_Object__c.field-meta.xml
<CustomField>
    <fullName>Connected_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Object</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Connected Objects</relationshipLabel>
    <relationshipName>Clarity_Form_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>