force-app/main/default/objects/Question__c/fields/ExternalBuilderId__c.field-meta.xml
<CustomField>
    <fullName>ExternalBuilderId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalBuilderId</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>