force-app/main/default/objects/Question__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Clarity Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>