force-app/main/default/objects/Question__c/fields/Form_Version__c.field-meta.xml
<CustomField>
    <fullName>Form_Version__c</fullName>
    <label>Clarity Form Version</label>
    <referenceTo>Form_Version__c</referenceTo>
    <relationshipLabel>Clarity Form Questions</relationshipLabel>
    <relationshipName>Clarity_Form_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>