force-app/main/default/objects/Question__c/fields/FreeText_Type__c.field-meta.xml
<CustomField>
    <fullName>FreeText_Type__c</fullName>
    <label>Free Text Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Paragraph</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>