force-app/main/default/objects/Question__c/fields/Max_Range__c.field-meta.xml
<CustomField>
    <fullName>Max_Range__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Max Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>