force-app/main/default/objects/Question__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Page</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>