force-app/main/default/objects/Question__c/fields/Record_Group__c.field-meta.xml
<CustomField>
    <fullName>Record_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Group</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Record Groups</relationshipLabel>
    <relationshipName>Clarity_Form_Questions1</relationshipName>
    <type>Lookup</type>
</CustomField>