force-app/main/default/objects/Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MultipleChoice</fullName>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
            <value>
                <fullName>Dropdown</fullName>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>RecordGroup</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Attachments</fullName>
            </value>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>DATETIME</fullName>
            </value>
            <value>
                <fullName>CURRENCY</fullName>
            </value>
            <value>
                <fullName>COMBOBOX</fullName>
            </value>
            <value>
                <fullName>ADDRESS</fullName>
            </value>
            <value>
                <fullName>ANYTTYPE</fullName>
            </value>
            <value>
                <fullName>BASE64</fullName>
            </value>
            <value>
                <fullName>DOUBLE</fullName>
            </value>
            <value>
                <fullName>ENCRYPTEDSTRING</fullName>
            </value>
            <value>
                <fullName>INTEGER</fullName>
            </value>
            <value>
                <fullName>LONG</fullName>
            </value>
            <value>
                <fullName>MULTIPICKLIST</fullName>
            </value>
            <value>
                <fullName>PERCENT</fullName>
            </value>
            <value>
                <fullName>PHONE</fullName>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
            </value>
            <value>
                <fullName>TEXTAREA</fullName>
            </value>
            <value>
                <fullName>TIME</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>